# ltrace_decoder

./: .gitignore  Cargo.toml  README.md
crates/gcno_reader/: Cargo.toml
crates/gcno_reader/examples/: addr2line.rs  get_func_sym.rs
crates/gcno_reader/src/: cfg.rs  gcno.rs  lib.rs  reader.rs  tag.rs
crates/gcno_reader/tests/: reader_test.rs
crates/gcno_reader/tests/data/x86-gcc13/: build.sh  clean.sh  sort.c
scripts/: clean.sh  find_divergence.py  find_divergence_spike.py  find_divergence_verilator.py  match_joints.py
src/: main.rs  packet.rs
src/backend/: abstract_receiver.rs  afdo_receiver.rs  event.rs  gcda_receiver.rs  json_receiver.rs  speedscope_receiver.rs  stack_unwinder.rs  txt_receiver.rs  vpp_receiver.rs
src/frontend/: packet.rs
