[workspace]
members = [
  ".",
  "crates/gcno_reader"
]

[package]
name = "ltrace-decoder"
version = "0.1.0"
edition = "2021"
authors = ["iansseijelly"]


[dependencies]
object = "0.36"
capstone = "0.12"
clap = { version = "4.5.18", features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
bus = "2.4.1"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
env_logger = "0.10"
gcno_reader = { path = "crates/gcno_reader" }
addr2line = "0.24.2"
indexmap = "2.7.0"
jsonschema = "0.17"